feat(actions): ignore changeset-releases branch

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,6 +1,9 @@
 name: Checks
 
-on: pull_request
+on:
+  pull_request:
+    branches-ignore:
+      - 'changeset-set-release/**'
 
 env:
   CI: true
