feat(actions): fix ignore changeset and test snapshot

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,7 +3,8 @@ name: Checks
 on:
   pull_request:
     branches-ignore:
-      - 'changeset-set-release/**'
+      - 'changeset-release/**'
+      - 'changeset-snapshot/**'
 
 env:
   CI: true
