--- a/.github/workflows/snapshot-version.yml
+++ b/.github/workflows/snapshot-version.yml
@@ -8,7 +8,7 @@ env:
 run-name: '[Snapshots]: Version for ${{ github.ref_name }}'
 
 jobs:
-  build:
+  snapshot-version:
     name: Snapshot
     runs-on: ubuntu-latest
     steps:
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: feature/reusable-actions
+          ref: ${{ github.ref_name }}
 
       - name: Install pnpm package manager
         id: install-pnpm
@@ -44,8 +44,8 @@ jobs:
           setupGitUser: false
           version: pnpm snapshot:version
           #publish: pnpm snapshot:publish
-          title: "Snapshot Release"
-          commit: "chore(release): snapshot release"
+          title: "chore(version): Snapshot Version"
+          commit: "chore(version): creating a snapshot version"
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.GH_TOKEN }}
