--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,18 @@
-name: Version Snapshots
+name: Release
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
 
 env:
   CI: true
 
-run-name: '[Snapshots]: Version for ${{ github.ref_name }}'
+run-name: '[Release]: Release for ${{ github.ref_name }}'
 
 jobs:
-  snapshot-version:
+  release-build:
+    if: github.event.pull_request.merged == true
     name: Snapshot
     runs-on: ubuntu-latest
     steps:
@@ -16,7 +20,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          #ref: ${{ github.ref_name }}
 
       - name: Install pnpm package manager
         id: install-pnpm
@@ -42,10 +45,10 @@ jobs:
         uses: changesets/action@v1.4.5
         with:
           setupGitUser: false
-          version: pnpm snapshot:version
-          #publish: pnpm snapshot:publish
-          title: "chore(version): Snapshot Version"
-          commit: "chore(version): creating a snapshot version"
+          #version: pnpm snapshot:version
+          publish: pnpm release
+          title: "chore(release): Stable Release"
+          commit: "chore(release): deploy stable release"
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.GH_TOKEN }}
